# nanochat-rocm

./: .gitignore  README.md  pyproject.toml  run1000.sh  speedrun.sh
dev/: gen_synthetic_data.py  runcpu.sh
nanochat/: adamw.py  common.py  dataloader.py  engine.py  execution.py  gpt.py  loss_eval.py  report.py  tokenizer.py  ui.html
scripts/: base_eval.py  base_loss.py  base_train.py  chat_eval.py  chat_sft.py  chat_web.py  mid_train.py
tasks/: customjson.py  spellingbee.py
